// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTAccountEvent";
option optimize_for = LITE_RUNTIME;

import public "RPCEnums.proto";
import public "PaymentWorkflowEnums.proto";

message AccountEvent {
    optional uint32 version = 1;
    optional string id = 2;				// account id
    optional AccountEventType type = 3;	// see RPCEnums.proto
    optional string contact = 4;		// contact id
    optional string workflow = 5;		// workflow id
    optional int64 amount = 6;
    optional int64 pendingamount = 7;
    optional int64 timestamp = 8;
    optional string memo = 9;
    optional string uuid = 10;
    optional PaymentWorkflowState state = 11;
    optional string amount_mp = 12;
    optional string pendingamount_mp = 13;
}
