// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTContactEvent";
option optimize_for = LITE_RUNTIME;

import public "AccountEvent.proto";
import public "RPCEnums.proto";

message ContactEvent {
    optional uint32 version = 1;
    optional string id = 2;
    optional ContactEventType type = 3;
    optional int64 timestamp = 4;
    optional string message = 5;
    optional string account = 6;
    optional AccountEvent accountevent = 7;
}
