// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTTransactionData";
option optimize_for = LITE_RUNTIME;

import public "RPCEnums.proto";
import public "PaymentWorkflowEnums.proto";

message TransactionData {
    optional uint32 version = 1;
    optional string uuid = 2;
    optional PaymentWorkflowType type = 3;
    repeated string sourceaccounts = 4;
    repeated string destinationaccounts = 5;
    optional int64 amount = 6;
    optional PaymentWorkflowState state = 7;
    optional string amount_mp = 8;
}
